--- a/Index.html
+++ b/Index.html
@@ -24,9 +24,9 @@
                 <input type="number" v-model="firstNumber">
                 <span>+</span>
                 <input type="number" v-model="secondNumber">
-                <button @click="Calculate"></button>
+                <button @click="Calculate"> = </button>
             </div>
-            <h2>{{ Result }}</h2>
+            <h2>{{ Result() }}</h2>
         </div>    
     </main>
     
